--- a/TableViewExercise/View/Base.lproj/Main.storyboard
+++ b/TableViewExercise/View/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="r49-pU-d4V">
                             <color key="tintColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <action selector="editCells:" destination="BYZ-38-t0r" id="Cot-4a-HPD"/>
+                                <action selector="reorderCells:" destination="BYZ-38-t0r" id="L7D-L8-3fi"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
