Delete and Reordering of cells operation bounded together,Previous logic changed
- Reordering and Delete operations earlier were used separately. Now, one Edit button is clicked and both the operations can be performed simultaneously
- Due to above logic change, changes made in code by removing the isReordering and isDelete enabled bools
- Outlets, IBActions names and code changed as per the logic
- reorderCells(:) IBAction removed
- new IBAction editTableCells(:) added to handle tableView’s editing state
- deleteCells(:) IBAction code changed.
- recreateSelected(:[Indexpath]) added  to reset the rows to selected state as after reloading, the rows are no more selected.
- weak references added in the closure to avoid a retain cycle of self
- tableView’s editing state delegates updated as per the logic
- StringLiterals Structure updated
- Previous dark images removed(looked similar). New Images Added for the background.
- Updating done in code due to the above image changes(in the image assets and wherever those were used)
- Bar buttons updated as per the logic, IBOutlets and IBActions added
- TableViewCell’s unused imageView removed

--- a/TableViewExercise/View/Base.lproj/Main.storyboard
+++ b/TableViewExercise/View/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,21 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rho-1L-ZfN">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rho-1L-ZfN">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="customCellIdentifier" rowHeight="120" id="UEA-hV-bMQ" customClass="CustomTableViewCell" customModule="TableViewExercise" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="customCellIdentifier" rowHeight="120" id="UEA-hV-bMQ" customClass="CustomTableViewCell" customModule="TableViewExercise" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UEA-hV-bMQ" id="nYN-PI-gvE">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="751" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0a4-Tf-67L">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="751" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0a4-Tf-67L">
                                                     <rect key="frame" x="15" y="50" width="345" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -61,28 +60,20 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="md8-Jp-rYU">
-                        <barButtonItem key="leftBarButtonItem" title="Select" id="PkC-ze-ftv">
+                        <barButtonItem key="leftBarButtonItem" title="Delete" id="PkC-ze-ftv">
                             <connections>
-                                <action selector="deleteCells:" destination="BYZ-38-t0r" id="pX8-XI-uxh"/>
+                                <action selector="deleteCells:" destination="BYZ-38-t0r" id="aXv-Zw-ZUy"/>
                             </connections>
                         </barButtonItem>
-                        <rightBarButtonItems>
-                            <barButtonItem title="Reorder" id="r49-pU-d4V">
-                                <connections>
-                                    <action selector="reorderCells:" destination="BYZ-38-t0r" id="L7D-L8-3fi"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="Delete" id="PQl-V1-P8A">
-                                <connections>
-                                    <action selector="deleteCells:" destination="BYZ-38-t0r" id="NJS-e2-oDP"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="r49-pU-d4V">
+                            <connections>
+                                <action selector="editTableCells:" destination="BYZ-38-t0r" id="fUr-Qz-pw2"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="deleteCellsBarButton" destination="PQl-V1-P8A" id="75z-8a-sSj"/>
-                        <outlet property="reorderCellsBarButton" destination="r49-pU-d4V" id="Zpl-PQ-Ssm"/>
-                        <outlet property="selectCellsBarButton" destination="PkC-ze-ftv" id="VcF-xz-XtI"/>
+                        <outlet property="deleteCellsBarButton" destination="PkC-ze-ftv" id="L9t-Pf-INF"/>
+                        <outlet property="editTableBarButton" destination="r49-pU-d4V" id="HLp-Tf-UOg"/>
                         <outlet property="tableView" destination="rho-1L-ZfN" id="foL-EP-mnI"/>
                     </connections>
                 </viewController>
